--- a/Infrastructure/MyBlogApp.Persistance/MyBlogApp.Persistance.csproj
+++ b/Infrastructure/MyBlogApp.Persistance/MyBlogApp.Persistance.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Core\MyBlogApp.Application\MyBlogApp.Application.csproj" />
     <ProjectReference Include="..\..\Core\MyBlogApp.Domain\MyBlogApp.Domain.csproj" />
   </ItemGroup>
 
