in memory cache

--- a/Infrastructure/MyBlogApp.Infrastructure/MyBlogApp.Infrastructure.csproj
+++ b/Infrastructure/MyBlogApp.Infrastructure/MyBlogApp.Infrastructure.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\MyBlogApp.Application\MyBlogApp.Application.csproj" />
+  </ItemGroup>
+
 </Project>
