--- a/Presentation/MyBlogApp.UI/MyBlogApp.UI.csproj
+++ b/Presentation/MyBlogApp.UI/MyBlogApp.UI.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Infrastructure\MyBlogApp.Infrastructure\MyBlogApp.Infrastructure.csproj" />
     <ProjectReference Include="..\..\Infrastructure\MyBlogApp.Persistance\MyBlogApp.Persistance.csproj" />
   </ItemGroup>
 
