--- a/Infrastructure/MyBlogApp.Infrastructure/MyBlogApp.Infrastructure.csproj
+++ b/Infrastructure/MyBlogApp.Infrastructure/MyBlogApp.Infrastructure.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Core\MyBlogApp.Application\MyBlogApp.Application.csproj" />
   </ItemGroup>
 
