--- a/Presentation/MyBlogApp.UI/appsettings.json
+++ b/Presentation/MyBlogApp.UI/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    "Redis": "redis-11826.c114.us-east-1-4.ec2.redns.redis-cloud.com:11826,password=smlQy6ZXqb5y7JBs4joU3P6vHcuTXLi1",
     "MyBlogAppDbConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=MyBlogAppDb;Integrated Security=True;"
   }
 }
