--- a/Presentation/MyBlogApp.UI/MyBlogApp.UI.csproj
+++ b/Presentation/MyBlogApp.UI/MyBlogApp.UI.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\..\Infrastructure\MyBlogApp.Persistance\MyBlogApp.Persistance.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
