--- a/Presentation/MyBlogApp.UI/appsettings.json
+++ b/Presentation/MyBlogApp.UI/appsettings.json
@@ -8,7 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Redis": "redis-11826.c114.us-east-1-4.ec2.redns.redis-cloud.com:11826,password=smlQy6ZXqb5y7JBs4joU3P6vHcuTXLi1",
-    //"MyBlogAppDbConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=MyBlogAppDb;Integrated Security=True;",
     "MyBlogAppDbConnectionString": "Server=localhost;Database=MyBlogAppDb;User Id=sa;Password=1q2w3e4r5t;TrustServerCertificate=True"
+  },
+  "FilePaths": {
+    "BasePath": "content\\images",
+    "AuthorImagesPath": "\\author_images"
   }
 }
