--- a/Infrastructure/MyBlogApp.Infrastructure/MyBlogApp.Infrastructure.csproj
+++ b/Infrastructure/MyBlogApp.Infrastructure/MyBlogApp.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
 	  <FrameworkReference Include="Microsoft.AspNetCore.App" />
+	  <PackageReference Include="Azure.Storage.Blobs" Version="12.21.2" />
 	  <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.0" />
 	  <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
 	  <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
